# article-template

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  deploy.sh  docker-compose.yml  latexmkrc  main.bib  main.tex
.github/workflows/: article_template.yaml  articles_branch_ci.yaml  ci.yaml  master_branch_ci.yaml
articles/back_cover/: Makefile  README.md  back_cover.tex  config.tex  main.tex
articles/cover/: main.tex
articles/hinagata/: CMakeLists.txt  Makefile  Makefile.in  OMakefile  OMakeroot  configure.ac  docker-compose.yml  latexmkrc  main-lua.tex  main-ptex.tex  main.tex  main_even.tex  main_odd.tex
articles/hinagata-import-pdf/: latexmkrc  main.tex
articles/hinagata-markdown/: .gitignore  Makefile  docker-compose.yml  jisb5.ps  main.md  word-template.latex
articles/hinagata/cmake/: FindLatexMk.cmake
articles/test-ci-2023-10-11/: main.md  word-template.latex
articles/test-md/: main.md  word-template.latex
docker/: Dockerfile
jenkins/: build.sh  create_repository.sh  deploy.sh  notify_slack.sh
pipeline/: deploy_image.sh  deploy_pdf.sh  idcf_upload.py
scripts/: all_pandoc.sh  notify_slack.sh
texfiles/: .gitignore  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  docker-compose.yml  word.dtx  word.ins
texfiles/docker/: Dockerfile
texfiles/pipeline/: deploy_image.sh  deploy_pdf.sh
travis/: deploy.sh  deploy_key.enc
